cluster-go/lightspeed-benchmark/test-02/templates/chess-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
  name: chess
  namespace: ols-test-02
  labels:
    app: chess
    app.kubernetes.io/component: chess
    app.kubernetes.io/instance: chess
    app.kubernetes.io/name: chess
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-namespace: ols-test-02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chess
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: chess
        deployment: chess
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: chess
          image: 'quay.io/rh_ee_cschmitz/chess-node:latest'
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
