cluster-go/lightspeed-benchmark/test-02/templates/chess-route.yaml
---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: chess
  namespace: ols-test-02
  labels: {}
spec:
  to:
    kind: Service
    name: chess
  tls: {}
  port:
    targetPort: 3000
